<resources>
    <string name="app_name">키즈하루</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="splash">splash</string>

    <string name="cancel">취소</string>
    <string name="confirm_formal">확인했어요</string>
    <string name="child_name">원아이름</string>
    <string name="parent_contact">학부모 번호</string>
    <string name="contact_example">010–0000–0000</string>
    <string name="name_example">김철수</string>

    <string name="id">아이디</string>
    <string name="pw">패스워드</string>
    <string name="id_hint">아이디를 입력해주세요</string>
    <string name="pw_hint">비밀번호를 입력해주세요</string>
    <string name="pw_confirm">패스워드 확인</string>
    <string name="name_hint">학부모에게 보여질 이름</string>
    <string name="invite_code_hint">문자 메시지로 받은 초대 코드</string>
    <string name="register">회원가입</string>
    <string name="register_as_teacher">교사로 회원가입</string>
    <string name="register_as_parent">학부모로 회원가입</string>
    <string name="register_as_parent_success">학부모로 회원가입 성공</string>
    <string name="register_as_teacher_success">교사로 회원가입 성공</string>
    <string name="pw_confirm_not_match">입력하신 비밀번호가 서로 다릅니다</string>
    <string name="number_of_people">%d 명</string>
    <string name="enter_album_name">이번 추억에 이름을 입력해주세요</string>
    <string name="album_title">앨범 제목</string>
    <string name="album_content">앨범 내용</string>
    <string name="confirm">확인</string>
    <string name="slash">/</string>

    <string name="parent_home_title">앨범 모아보기</string>
    <string name="parent_home_sub_title">내가 선생님에게 공유받은 앨범 리스트</string>
    <string name="teacher_home_title">앨범 모아보기</string>
    <string name="teacher_home_sub_title">내가 학부모들에게 공유한 앨범 리스트</string>

    <string name="parent_home_nav_title_1">보검맘님 안녕하세요</string>
    <string name="parent_home_nav_title_2">아이들은 오늘 어떤 하루를 보냈을까요?</string>

    <string name="share_title">공유하기</string>
    <string name="share_sub_title">아이들의 예쁜 모습을 공유합니다.</string>

    <string name="children_manage_title">원아 관리하기</string>
    <string name="children_manage_sub_title">사랑스러운 아이들을 쉽게 관리해보세요</string>

    <string name="parent_my_child_title">내 아이 사진 보기</string>
    <string name="parent_my_child_sub_title">나의 아이의 사진만 감상해보세요</string>
</resources>
