<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/id_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:inputType="text" />

    <EditText
        android:id="@+id/pw_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pw"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/pw_confirm_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pw_confirm"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/invite_code_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/invite_code_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"/>
</LinearLayout>