<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="#fde576" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:src="@drawable/text_kids_haru" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/img_bear" />

        <EditText
            android:id="@+id/id_field"
            android:layout_width="282dp"
            android:layout_height="28dp"
            android:layout_marginTop="73dp"
            android:background="@null"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/id_hint"
            android:inputType="text"
            android:paddingStart="9dp"
            android:paddingEnd="9dp"
            android:textColor="#2a2a2a"
            android:textSize="14sp"
            android:textStyle="normal" />

        <View
            android:layout_width="282dp"
            android:layout_height="1dp"
            android:background="#2a2a2a" />

        <EditText
            android:id="@+id/pw_field"
            android:layout_width="282dp"
            android:layout_height="28dp"
            android:layout_marginTop="35dp"
            android:background="@null"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/pw_hint"
            android:inputType="textPassword"
            android:paddingStart="9dp"
            android:paddingEnd="9dp"
            android:textColor="#2a2a2a"
            android:textSize="14sp"
            android:textStyle="normal" />

        <View
            android:layout_width="282dp"
            android:layout_height="1dp"
            android:background="#2a2a2a" />

        <ImageView
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="73dp"
            android:src="@drawable/btn_login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/register_teacher"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/register_as_teacher"
                android:textColor="#2a2a2a"
                android:textSize="14sp"
                android:textStyle="normal" />

            <View
                android:layout_width="1dp"
                android:layout_height="17dp"
                android:background="#2a2a2a" />

            <TextView
                android:id="@+id/register_parent"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/register_as_parent"
                android:textColor="#2a2a2a"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>